fixed numbers out of box on desktop

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body{
   border-radius: 50px;
   background-color: #ECDFCC;
   padding: 20px;
-  max-width: 330px; /* Add this */
+  max-width: 500px; /* Add this */
   width: 100%; /* Makes the container responsive */
 }
 
@@ -80,5 +80,14 @@ body{
     padding: 8px 15px;
     min-width: 100px;
   }
+}
+
+.author-name {
+  font-size: 1.2rem;
+  color: #ffffff;
+  opacity: 0.5;
+  margin-top: 25px; /* Adds space between the stopwatch and your name */
+  font-family: monospace;
+  text-align: center;
 }
 
